# pet_flask_app

./: .gitignore  README.md  app.py  image.py  main.py  pyproject.toml  requirements.txt
pet_flask_app/: app.py
