[tool.poetry]
name = "pet_flask_app"
version = "0.1.0"
description = "Test api web app for CloudX Associate program"
authors = ["Stanislau Klimovich <stasklimovich299@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["poetry.lock"]
packages = [
    { include = "pet_flask_app", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Jinja2 = "^3.0.1"
requests = "^2.22.0"
flask-restful = "^0.3.9"
psycopg2-binary = "^2.9.3"
boto3 = "^1.20.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
